# marque

./: README.md  pyproject.toml
.github/workflows/: ci.yml
ad/: client.py  workflows.py
addinutil/: 1-explore_ratline.py  2-explore_marque.py  3-explore_luigi.py  4-explore_flyte.py  5-explore_prefect.py
addinutil/binaries/: AddInUtil.exe.cs
addinutil/utils/: metrics.py  prompts.py  tools.py
marque/: __init__.py  flow.py  helpers.py  logging.py  scope.py  storage.py  util.py
tools/ad/: eval.py  generate.py
tools/addinutil/: 5-explore_prefect.py  addinutil.ipynb
tools/addinutil/binaries/: Microsoft.Workflow.Compiler.exe.cs  System.AddIn.dll.cs  System.Workflow.ComponentModel.dll.cs
tools/addinutil/utils/: generator.py  reversing.py  tools.py
